
* SOLR-17090: The v2 "delete alias" API no longer errantly returns a 405 status code (Jason Gerlowski)

* SOLR-17057: JSON Query regression: If "query" is specified with a String (not JSON structure),
  "defType" should parse it.  Since 9.4 defType was ignored.  (David Smiley)

* SOLR-17060: CoreContainer#create may deadlock with concurrent requests for metrics (Alex Deparvu, David Smiley)

Dependency Upgrades
---------------------
* SOLR-17012: Update Apache Hadoop to 3.3.6 and Apache Curator to 5.5.0 (Kevin Risden)

* SOLR-17026: Upgrade to Gradle 8.4 (Kevin Risden)

Other Changes
---------------------
* SOLR-17024: Remove support for the long-defunct "collectionDefaults" clusterprops key (Jason Gerlowski)

* SOLR-17042: Deprecate the V2RequestSupport interface, and the associated `setUseV2` and `setUseBinaryV2` SolrRequest
  methods.  SolrJ users looking to make use of v2 APIs in their applications can use the SolrRequest implementations
  dedicated to that purpose. (Jason Gerlowski)

* SOLR-17072: package CLI tool prints error JSONPath (Mikhail Khludnev)

* SOLR-17078: The `train_and_upload_demo_model.py` script referenced in LTR documentation now uses Python3 (Jason Gerlowski)

* SOLR-17091: dev tools script cloud.sh became broken after changes in 9.3 added a new -slim.tgz file it was not expecting
  cloud.sh has been updated to ignore the -slim.tgz version of the tarball.

* SOLR-16949: Restrict certain file types from being uploaded to or downloaded from Config Sets (janhoy, Houston Putman)

* SOLR-16880: Solr now produces an OpenAPI Specification artifact on releases ("solr-openapi-x.y.z.json") that covers
  Solr's v2 APIs. (Jason Gerlowski, Houston Putman)

==================  9.4.0 ==================
New Features
---------------------
* SOLR-16654: Add support for node-level caches (Michael Gibney)

* SOLR-16954: Make Circuit Breakers available for Update Requests (janhoy, Christine Poerschke, Pierre Salagnac)
